--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-	<title>Git | Start Page</title>
+	<title>GitHub | Start Page</title>
 </head>
 <body>
 	<h1>Hello, Git!</h1>
-	тут типа еще код...
 </body>
 </html>
